devel
-----

* ES-1312: fix handling of reaching the WAL archive capacity limit.

* BTS-941: The HTTP API now delivers the correct list of the collection's
  shards in case a collection from an EnterpriseGraph, SmartGraph, Disjoint
  EnterpriseGraph, Disjoint SmartGraph or SatelliteGraph is being used.

* Changed the encoding of revision ids returned by the following REST APIs:
  - GET /_api/collection/<collection-name>/revision: the revision id was
    previously returned as numeric value, and now it will be returned as
    a string value with either numeric encoding or HLC-encoding inside.
  - GET /_api/collection/<collection-name>/checksum: the revision id in
    the "revision" attribute was previously encoded as a numeric value
    in single server, and as a string in cluster. This is now unified so
    that the "revision" attribute always contains a string value with
    either numeric encoding or HLC-encoding inside.

* Fixed handling of empty URL parameters in HTTP request handling.

* Fixed diffing of completely non-overlapping revision trees, which could
  lead to out-of-bounds reads at the right end of the first (smaller) tree.

* Fixed aborting the server process if an exception was thrown in C++ code
  that was invoked from the llhttp C code dispatcher. That dispatcher code
  couldn't handle C++ exceptions properly.

* Fixed BTS-1073: Fix encoding and decoding of revision ids in replication 
  incremental sync protocol. Previously, the encoding of revision ids could 
  be ambiguous under some circumstances, which could prevent shards from 
  getting into sync.

* Log better diagnosis information in case multiple servers in a cluster are
  configured to use the same endpoint.

* Fixed BTS-852 (user's saved queries used to disappear after updating user profile).

* MDS-1016: When creating a new collection the fields "Number of Shards" and
  "Replication factor" are greyed out now when the field "Distribute shards
  like" is not empty.
